# kubernetes-cedar-authorizer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
demo/: secret.yaml
docs/: GETTING_STARTED.md  impersonation.md
localdev/: apiserver-authz-config-with-webhook.yaml  apiserver-authz-config-without-webhook.yaml  kind-with-registry.sh  kind.yaml  webhook-rbac.yaml  webhook-static-pod.yaml
localdev/mount/: authorization-webhook-kubeconfig.yaml  e2e.cedar  e2e.cedarschema
src/: lib.rs  main.rs  schema.rs  util.rs
src/cedar_authorizer/: ast.rs  authorizer.rs  cel.rs  entitybuilder.rs  err.rs  fork.rs  kube_invariants.rs  kubestore.rs  mod.rs  residuals.rs  symcc.rs
src/cedar_authorizer/kube_invariants/: err.rs  policyset.rs  residual.rs  schema.rs
src/cedar_authorizer/kube_invariants/testfiles/rewrite-schema/: after.cedarschema  before.cedarschema
src/cedar_authorizer/testfiles/: e2e.cedar  is_authorized.cedar  object_selected.cedar  simple.cedar  simple.cedarschema  symcc_result.json
src/k8s_authorizer/: attributes.rs  authorizer.rs  err.rs  mod.rs  selectors.rs  test_utils.rs
src/schema/: connect.rs  core.rs  customverbs.rs  discovery.rs  err.rs  fork.rs  impersonate.rs  openapi.rs  types.rs  util.rs
src/schema/fork/: openapigetter.rs
src/schema/testfiles/: apiresourcelist-core-v1.json  core.cedarschema  openapi-core-v1.json  withconnect.cedarschema  withcustomverbs-formatted.cedarschema  withcustomverbs.cedarschema  withdiscovery.cedarschema  withimpersonation-formatted.cedarschema  withimpersonation.cedarschema  withopenapi.cedarschema
