[package]
name = "kubernetes-cedar-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
cedar-policy = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed", features = ["tpe"] }
cedar-policy-core = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed", features = ["tpe"] }
cedar-policy-symcc = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed" }
cel = { path = "../cel-rust/cel" }
futures-util = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", features = ["client", "runtime"] }
rand = "0.9.2"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
smol_str = "0.3.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
