[package]
name = "kubernetes-cedar-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["http2", "macros"]}
axum-server = { version = "0.7.2", features = ["tls-rustls"]}
cedar-policy = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed", features = ["tpe"] }
cedar-policy-core = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed", features = ["tpe"] }
cedar-policy-symcc = { git = "https://github.com/cedar-policy/cedar.git", rev = "82784864c01b5096cb73885dd2df5643074355ed" }

# cedar-policy = { path = "../cedar/cedar-policy", features = ["tpe"] }
# cedar-policy-core = { path = "../cedar/cedar-policy-core", features = ["tpe"] }
# cedar-policy-symcc = { path = "../cedar/cedar-policy-symcc" }
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", features = ["client", "runtime"] }
opentelemetry = { version = "0.30.0", features = ["trace", "logs"] }
opentelemetry-otlp = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "logs"] }
rand = "0.9.2"
regex = "1.11.1"
rustls = "0.23.31"
serde = "1.0.219"
serde_json = "1.0.140"
smol_str = "0.3.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "macros"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
